# esp32-TuySa

./: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
components/automation_modes/: CMakeLists.txt  automation_modes.cpp
components/boot_manager/: CMakeLists.txt  boot_manager.cpp
components/captive_portal/: CMakeLists.txt  captive_portal.cpp  dns_server.cpp
components/config_manager/: CMakeLists.txt  config_manager.cpp
components/crypto_manager/: CMakeLists.txt  crypto_manager.cpp
components/event_log/: CMakeLists.txt  event_log.cpp
components/http_server/: CMakeLists.txt  http_server.cpp  http_server_crypto_patch.cpp
components/hw_watchdog/: CMakeLists.txt  hw_watchdog.cpp
components/mdns_wrapper/: CMakeLists.txt  mdns_wrapper.cpp
components/mqtt_bridge/: CMakeLists.txt  mqtt_bridge.cpp
components/ota_manager/: CMakeLists.txt  ota_manager.cpp
components/rate_limit/: CMakeLists.txt  rate_limit.cpp
components/rule_engine/: CMakeLists.txt  default_rules.h  rule_engine.cpp
components/satel_client/: CMakeLists.txt  satel_client.cpp  satel_protocol.cpp
components/spiffs_www/: CMakeLists.txt  idf_component.yml  spiffs_www.cpp
components/system_services/: CMakeLists.txt  system_services.cpp
components/tuya_client/: CMakeLists.txt  tuya_client.cpp  tuya_http.cpp
components/watchdog/: CMakeLists.txt  watchdog.cpp
components/web_tls/: CMakeLists.txt  web_tls.cpp
components/webhook_client/: CMakeLists.txt  webhook_client.cpp
main/: CMakeLists.txt  main.cpp
partitions/: partitions.csv
spiffs_data/: index.html
(+28 files in other folders)
